--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,1 @@
-spring.application.name=finance-manager
-spring.data.mongodb.uri=mongodb+srv://tuanbk:TuanGa9xty!=@finance-manager.txaq5.mongodb.net/?retryWrites=true&w=majority&appName=finance-manager
-spring.data.mongodb.database=financems
+spring.application.name=springboot-with-auth-skeleton
